tests/parsing/smtlib/v2.6/errors/010_exists_bad_var_2.expected
File "tests/parsing/smtlib/v2.6/errors/010_exists_bad_var_2.smt2", line 2, character 17-19:
2 | (assert (exists (as) true))
                     ^^
Error while parsing a term, read the reserved word 'as',
      but expected a sorted variable of the form "(var sort)".
